[metadata]
name = Myte
version = 0.0.1
author = Samuel Doghor
author_email = talkto@samdoghor.com
description = Myte allows users to choose from popular web frameworks like Flask, FastAPI, and Tornado etc when initializing a new project
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = one, two
license = MIT License
license_files = LICENSE
keywords = Myte, Flask, FastAPI, Tornado, Bottle, Pyramid, CherryPy, Boilerplate, Python web framework, Project bootstrapping, Framework


[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    typer
    inquirer

[options.entry_points]
console_scripts =
    create-myte = myte.main:main