[metadata]
name = myte
version = 1.0.0b1
author = Samuel Doghor
author_email = talkto@samdoghor.com
description = Myte allows users to choose from popular web frameworks like Flask, FastAPI, and Tornado etc when initializing a new project. After entering a project name, the user selects their preferred framework which then generates the basic directory structure and boilerplate code to get started.
long_description = file: README.md, CHANGELOG.md, LICENSE
license = MIT License
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3,
    License :: OSI Approved :: MIT License,
    Operating System :: OS Independent,
    Intended Audience :: Developers,
    Environment :: Console,
keywords = Myte, Flask, FastAPI, Tornado, Bottle, Pyramid, CherryPy, Boilerplate, Web framework, Project bootstrapping, Framework


[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    typer
    inquirer
    rich

[options.entry_points]
console_scripts =
    create-myte = packages.main:main